# spline

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  build_all.sh
.github/workflows/: llvm.sh  macos.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
documentation/: CMakeLists.txt  Doxyfile  conf.py
documentation/pages/: about.dox
examples/de_casteljau_point2d/: CMakeLists.txt  capture_output_evolution.py  main.cpp  print_intermediate_output.gdb
include/spline/: concepts.hpp  de_casteljau.hpp  de_casteljau_subdivide.hpp  traits.hpp  vector_space_algebra.hpp
include/spline/core/: de_casteljau.hpp  de_casteljau_subdivide.hpp
include/spline/impl/: algebraic_vector.hpp  proxy_iterator.hpp
include/spline/stdx/: traits.hpp
source/: .clang-tidy  concepts.cpp  concepts.test.cpp  de_casteljau.cpp  de_casteljau.test.cpp  de_casteljau_subdivide.cpp  de_casteljau_subdivide.test.cpp  traits.cpp  traits.test.cpp  vector_space_algebra.cpp  vector_space_algebra.test.cpp
source/impl/: algebraic_vector.cpp  algebraic_vector.test.cpp
test/: CMakeLists.txt  test_utilities.cmake
tools/: CPM.cmake
